# proyecto

./: .gitignore  3dstudio.h  CMakeLists.txt  Makefile  fshader.glsl  geometryrender.cpp  geometryrender.h  glfwcallbackmanager.h  main.cpp  openglwindow.cpp  openglwindow.h  vshader.glsl
include/glew/: glew.pc
lib/ImGui/: imgui.d  imgui_demo.d  imgui_draw.d  imgui_impl_glfw.d  imgui_impl_opengl3.d  imgui_tables.d  imgui_widgets.d
lib/ImGuiFileDialog/: ImGuiFileDialog.d
lib/SOIL/projects/VC11/: SOIL.vcxproj  SOIL.vcxproj.filters
lib/SOIL/projects/VC9/: SOIL.vcproj
lib/SOIL/src/: SOIL.cpp
lib/TextureLibs/: stb_image.cpp
resources/: cube_brick.mtl  pokeball.mtl
shaders/: fshader.glsl  vshader.glsl
